# asr-bias-builder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
asr_bias_builder/: __init__.py  __version__.py  cli.py  config.py  pipeline.py
asr_bias_builder/artifacts/: __init__.py  google_stt.py  validators.py  whisper.py
asr_bias_builder/extraction/: __init__.py  ocr.py  pdf.py  pptx.py  sections.py
asr_bias_builder/llm/: __init__.py  claude.py  parser.py
asr_bias_builder/mining/: __init__.py  filters.py  seeds.py
asr_bias_builder/reporting/: __init__.py  csv_export.py  summary.py
asr_bias_builder/utils/: __init__.py  logging.py  telemetry.py  validation.py
asr_bias_builder/verification/: __init__.py  deduplicator.py  matcher.py  scorer.py
config/: schema.json
config/examples/: README.md  advanced.yml  basic.yml  deck_specific.yml
docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
docs/: README.md  api-reference.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  installation.md  integration.md  pipeline.md  troubleshooting.md
docs/architecture/: extraction.md  llm-integration.md  (+2 more)
examples/: README.md
scripts/: batch_process.py  benchmark.py  claudecode_llm_pass.sh  make_bias.sh  merge_aliases.py
tests/: conftest.py  test_artifacts.py  test_extraction.py  test_integration.py  test_mining.py  test_verification.py
(+22 files in other folders)
